--- a/style.css
+++ b/style.css
@@ -17,20 +17,54 @@ p{
     background-color: var(--devcode);
 }
 
-.botoes {
+/*.botoes {
     display: flex;
     gap: 10px;
-    margin-top: 20px;
+    margin-top: 20px; 
+}*/
+
+.botoes {
+    border: 2px solid black;
+    width: 500px;
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
 }
 
-.btn-01 {
-    width: 100px;
-    height: 50px;
-    background-color: var(--color-primary); 
-}
-
-.btn-02 {
-    width: 100px;
+.botao-padrao {
+    width: 200px;
     height: 50px;
     background-color: var(--color-primary);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 10px;   
+    border: 2px solid black; 
+}
+
+.btn-01:hover {   
+    background-color: rgb(107, 226, 107);
+    transition: 0.5s;
+    box-shadow: 10px 7px 20px rgb(29, 77, 29);
+}
+
+.btn-02:hover {   
+    background-color: rgb(133, 107, 226);
+    transition: 0.5s;
+    width: 230px;
+    height: 55px;
+}
+
+/*.btn-02 {
+    width: 200px;
+    height: 50px;
+    background-color: var(--color-primary);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 10px;
 }
